--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Ukuplayee</title>
-  <link rel="stylesheet" href="ukaplayee.css"/>
+  <link rel="stylesheet" href="ukuplayee.css"/>
 </head>
 
 <body>
